templates/athyonlinetemplate/css/template.css
/* setup */
body {
    background: url('../images/noise.png') repeat #eee;
    font-family: Tahoma, Geneva, sans-serif;
    margin: 0px;
    padding: 0px;
    font-size: 13px;
    color: #666;
}
a{
    color: #444;
}
a:hover{
    color: #c11120;
}
.clear{
    display: block;
    clear: both;
}
.hide{
    display: block;
    position: absolute;
    top: -2000px;
}
.left{
	float: left;
	}
.right{
	float: right;
	}
.width{
    width: 960px;
    margin: 0px auto 0px auto;
}
/* typography */
p{
	line-height: 17px;
	}
blockquote {
	margin-top: 10px;
	margin-bottom: 10px;
	margin-left: 50px;
	padding-left: 15px;
	border-left: 3px solid #CCC;
}
/* pagination */
.home .pagination{
	clear: both;
	}
.home .pagination{
	border: 1px solid #eee;
	background: #eee;
	margin: 0px 0px 15px 0px;
	padding: 10px;
	display: block;
	}
.home .pagination .counter{
	text-align: center;
	margin: 0px;
	padding: 0px 0px 10px 0px;
	}
.home .pagination ul{
	margin: 0px;
	padding: 0px 0px 0px 45px;
	display: block;
	text-align: center;
	clear: both;
	}
.home .pagination li{
	width: 30px;
	background: #ccc;
	margin: 0px 5px;
	color: #777;
	float: left;
	text-decoration: none;
	text-align: center;
	padding: 5px 10px;
	display: block;
	list-style: none;
	display: block;
}
/* forms */
.biginput{
	font-size: 20px;
	padding: 10px;
	margin: 10px 5px;
	color: #aaa;
	background: white;
	border: 1px solid #aaa;
	}
.bigbutton{
	font-size: 20px;
	padding: 10px;
	margin: 10px 5px;
	color: white;
	background: #ce1d1d;
	text-align: center;
	border: 1px solid #ce1d1d;
	}
.bigbutton:hover{
	color: white;
	background: red;
	}
.medinput{
	font-size: 16px;
	padding: 5px;
	margin: 10px 5px;
	color: #aaa;
	background: white;
	border: 1px solid #aaa;
	}
.medbutton{
	font-size: 16px;
	padding: 5px;
	margin: 10px 5px;
	color: white;
	background: #ce1d1d;
	text-align: center;
	border: 1px solid #ce1d1d;
	}
.medbutton:hover{
	color: white;
	background: red;
	}
	
.search #mod-search-searchword{
	font-size: 16px;
	padding: 5px;
	margin: 10px 5px;
	color: #aaa;
	background: white;
	border: 1px solid #aaa;
	}
.search .button{
	font-size: 16px;
	padding: 5px;
	margin: 10px 5px;
	color: white;
	background: #ce1d1d;
	text-align: center;
	border: 1px solid #ce1d1d;
	}
.search .button:hover{
	color: white;
	background: red;
	}

	
/* header */
.head {
	width: 100%;
	border-bottom: 6px solid black;
	margin: 10px 0px 12px 0px;
	}
.logo{
	margin: 0px 0px 5px 0px;
	padding: 0px;
	background: url('../images/logo_body.png') no-repeat;
	width: 150px;
	height: 83px;
	display: block;
	float: left;
	}
.logo-wheel {
	background: url('../images/logo_wheel.png') no-repeat;
	width: 44px;
	height: 44px;
	position: relative;
	left: 65px;
	top: 5px;
	-webkit-transition: all 0.7s linear;
	-moz-transition: all 0.7s linear;
	-o-transition: all 0.7s linear;
	-ms-transition: all 0.7s linear;
}
.logo-wheel:hover {
	-webkit-transform: rotate(360deg);
	-moz-transform: rotate(360deg);
	-o-transform: rotate(360deg);
	transform: rotate(360deg);
}
.search{
	float: right;
	padding: 5px 0px;
	}
#nav{
    height: 30px;
    display: block;
    float: right;
    margin: 0px;
    padding: 0px 0px 0px 0px;
    clear: right;
	}
#nav ul{
    margin: 0px;
    padding: 0px;
    float: left;
    display: block;
}
#nav li{
    float: left;
    list-style: none;
    margin: 0px;
    padding: 0px;
    display: block;
}
#nav li a{
    height: 18px;
	color: black;
    margin: 0px ;
    padding: 7px 15px 5px 15px;
    display: block;
    text-decoration: none;
}
#nav li a:hover{
	border-bottom: 6px solid #4046ba;
	}
#nav .active a{
	border-bottom: 6px solid #ce1d1d;
}
/* content */
hr{
	background: #ccc;
	height: 6px;
	width: 100%;
	border: none;
	margin: 0px 0px 15px 0px;
	padding: 0px;
	}
.home h2{
	color: #ccc;
	margin: 0px 0px 5px 0px;
	padding: 0px;
	font-size: 20px;
	font-weight: bold;
	}
.home h2 a{
	text-decoration: none;
	}
.home .item {
	background: #fff;
	margin: 0px 0px 15px 0px;
	padding: 10px;
	width: 289px;
	display: block;
	border: 1px solid #E7E7E7;
	}
/*
.home .item:hover{
	border-right: 7px solid #4046ba;
	margin-right: -7px;
	}
*/
.home .cols-3{
	width: 310px;
	float: left;
	}
.home .cols-3+.cols-3{
	margin: 0px 0px 0px 15px;
	}
.home .item h3{
	width: 207px;
	float: left;
	font-size: 14px;
	margin: 0px;
	padding: 0px 0px 10px 0px;
	}
.home .item .avatar{
	width: 70px;
	height: 70px;
	padding: 0px;
	margin: 0px 0px 5px 5px;
	float: right;
	}
.home .item p{
	margin: 0px;
	padding: 0px 0px 10px 0px;;
	}
.home .item .readmore a{
	clear: both;
	width: 266px;
	background: #ccc;
	margin: 0px;
	color: #777;
	text-decoration: none;
	text-align: center;
	padding: 5px 10px;
	display: block;
	}
.home .item .readmore{
	margin: 0px;
	padding: 0px;
	}
.home .item .readmore a:hover{
	background: #bbb;
	color: #666;
	}
.item img{
	width: 100px;
	float: right;
	margin: 0px 3px 10px 10px;
	border: 1px solid #ccc;
	}
.home .article-info{
	margin: 0px;
	padding: 0px 0px 5px 0px;
	}
.home .article-info dt{
	display: none; 
	}
.home .article-info dd{
	font-size: 10px;
	color: #999;
	margin: 0px;
	padding: 0px;
	}

/* interactions box */
.home .intbox{
	background: #eee;
	display: block;
	padding: 5px 15px;
	margin: 0px 0px 15px 0px;
	text-align: center;
	}
.home .intbox p{
	font-size: 16px;
	}
.home .intbox ul{
	margin: 0px 0px 0px 200px;
	padding: 0px;
	}
.home .intbox li{
	margin: 0px;
	padding: 0px;
	list-style:none;
	float: left;
	}
.home .intbox li a{
	margin: 0px 5px 0px 5px;
	padding: 10px;
	color: white;
	width: 150px;
	text-decoration: none;
	display: block;
}
.home .intbox .yt a{
	background: red;
}
.home .intbox .fb a{
	background: #3B5998;
}
.home .intbox .tw a{	
	background: #4099FF;
}
.home .intnav{
	height: 30px;
    display: block;
    float: right;
    margin: 0px 0px 30px 0px;
    padding: 0px 0px 0px 0px;
    width: 100%;
	border-bottom: 6px solid #aaa;
	}
.home .intnav ul{
	margin: 0px;
    padding: 0px;
    float: left;
    display: block;
    }
.home .intnav li{
    float: left;
    list-style: none;
    margin: 0px;
    padding: 0px;
    display: block;
}
.home .intnav li a{
    height: 18px;
	color: #777;
    margin: 0px 0px 10px 0px;
    padding: 7px 15px 5px 15px;
    display: block;
    text-decoration: none;
}
.home .intnav li a:hover{
	border-bottom: 6px solid #4046ba;
	}
.home .intnav .active a{
	border-bottom: 6px solid #ce1d1d;
}
.home .intcont{
	height: 200px;
	text-align: center;
	padding: 15px;
	display: block;
	}	
/* footer */
.footer{
	width: 100%;
	margin: 0px;
	padding: 5px 0px;
	border-top: 6px solid black;
	display: block;
	margin: 12px 0px 0px 0px;
	}
.footer p{
	margin: 0px;
	padding: 0px;
	}
.footer .left{
	margin: 30px 0px;
	}

